--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
 	    <title>Hello World</title>
 	</head>
 	<body>
-	    <div id="message">Hello World</div>
+		<div class="container">
+			<div class="message">Hello World</div>
+		</div>
 	    <script src="app.js"></script>
 	</body>
 </html>
