Add simple version of personal website

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,32 @@
     </head>
     <body>
         <div class="container">
-            <div class="message">Hello World</div>
+            <img class="logo" src="logo.png" alt="Logo of David Orlea">
+            <h1>David Orlea</h1>
+            <nav>
+                <ul>
+                    <li class="github">
+                        <a href="https://github.com/DavidOrlea">
+                            <span>Github</span>
+                        </a>
+                    </li>
+                    <li class="keybase">
+                        <a href="https://keybase.io/DavidOrlea">
+                            <span>Keybase</span>
+                        </a>
+                    </li>
+                    <li class="linkedin">
+                        <a href="https://www.linkedin.com/pub/david-orlea/9b/2a8/b42">
+                            <span>LinkedIn</span>
+                        </a>
+                    </li>
+                    <li class="xing">
+                        <a href="https://www.xing.com/profile/David_Orlea">
+                            <span>XING</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
         <script src="app.js"></script>
     </body>
