--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Hello World</title>
+        <link rel="shortcut icon" href="favicon.ico">
     </head>
     <body>
         <div class="container">
