--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Hello World</title>
+        <title>David Orlea</title>
         <link rel="shortcut icon" href="favicon.ico">
     </head>
     <body>
