--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>David Orlea</title>
         <link rel="shortcut icon" href="favicon.ico">
+        <link rel="stylesheet" href="style.scss" />
     </head>
     <body>
         <div class="container">
@@ -35,6 +36,5 @@
                 </ul>
             </nav>
         </div>
-        <script src="app.js"></script>
     </body>
 </html>
